force-app/main/default/objects/Territory__c/Territory__c.object-meta.xml
<CustomObject>
    <description>This is for Lead Territory Assignment.</description>
    <label>( Deprecated ) Territory1</label>
    <nameField>
        <label>Territory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>( Deprecated ) Territories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>