force-app/main/default/objects/Territory__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <externalId>true</externalId>
    <label>Postal Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>