force-app/main/default/objects/Territory__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>TLevel1__c</columns>
    <columns>TLevel2__c</columns>
    <columns>TLevel3__c</columns>
    <columns>NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>NAME</field>
        <operation>contains</operation>
        <value>MSP</value>
    </filters>
    <label>All</label>
</ListView>