force-app/main/default/objects/Territory__c/listViews/CEUR.listView-meta.xml
<ListView>
    <fullName>CEUR</fullName>
    <columns>NAME</columns>
    <columns>TLevel3__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TLevel2__c</field>
        <operation>equals</operation>
        <value>CEUR</value>
    </filters>
    <label>CEUR</label>
</ListView>