force-app/main/default/objects/Territory__c/listViews/COM_SOUTHEAST.listView-meta.xml
<ListView>
    <fullName>COM_SOUTHEAST</fullName>
    <columns>NAME</columns>
    <columns>TLevel3__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TLevel2__c</field>
        <operation>equals</operation>
        <value>COM SOUTHEAST</value>
    </filters>
    <label>COM SOUTHEAST</label>
</ListView>