force-app/main/default/objects/Territory__c/listViews/ENT_WEST_CENTRAL.listView-meta.xml
<ListView>
    <fullName>ENT_WEST_CENTRAL</fullName>
    <columns>NAME</columns>
    <columns>TLevel3__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TLevel2__c</field>
        <operation>equals</operation>
        <value>ENT WEST/CEN</value>
    </filters>
    <label>ENT WEST/CENTRAL</label>
</ListView>