force-app/main/default/objects/Territory__c/listViews/STATE_LOCAL.listView-meta.xml
<ListView>
    <fullName>STATE_LOCAL</fullName>
    <columns>NAME</columns>
    <columns>TLevel3__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TLevel2__c</field>
        <operation>equals</operation>
        <value>STATE/LOCAL</value>
    </filters>
    <label>STATE/LOCAL</label>
</ListView>