force-app/main/default/objects/Territory__c/listViews/UK_IRL_MEA.listView-meta.xml
<ListView>
    <fullName>UK_IRL_MEA</fullName>
    <columns>NAME</columns>
    <columns>TLevel3__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>TLevel2__c</field>
        <operation>equals</operation>
        <value>UK/IRL/MEA</value>
    </filters>
    <label>UK/IRL/MEA</label>
</ListView>